added encrypt